--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ui-driver-hwclouds",
+  "name": "ui-driver-baasil",
   "version": "0.0.1",
-  "description": "Skeleton Rancher UI driver for custom docker-machine drivers",
+  "description": "Rancher UI driver for Baasil.io",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/rancher/ui-driver-skel.git"
